# fast_api_do_zero

./: README.md  database.db  pyproject.toml
fast_zero/: app.py
migrations/versions/: ff1dc408d276_create_users_table.py
tests/: conftest.py  test_app.py
