[tool.poetry]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = ["nataliarivers <nataliarios@alu.ufc.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
fastapi = "^0.112.0"

[virtualenvs]
create = true
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
